# py-avro-schema

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE_HEADER.txt  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: codeql-analysis.yml  python-package.yml  python-publish.yml  release-package.yml  test-package.yml
docs/: conf.py  index.rst  modules.rst  py_avro_schema.rst  requirements.in  requirements.txt  tutorial.rst  types.rst
docs/source/: index.rst
src/py_avro_schema/: __init__.py  _schemas.py  _testing.py  _typing.py
tests/: test_avro_schema.py  test_dataclass.py  test_logicals.py  test_plain_class.py  test_primitives.py  test_pydantic.py  test_typing.py
