# Python package configuration file

[metadata]
name = py-avro-schema
author = J.P. Morgan Chase & Co.
author_email = open_source@jpmorgan.com
description = Generate Avro schemas for Python types
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jpmorganchase/py-avro-schema
project_urls =
  Bug Tracker = https://github.com/jpmorganchase/py-avro-schema/issues
  Download = https://pypi.python.org/pypi/py-avro-schema
  Source Code = https://github.com/jpmorganchase/py-avro-schema
classifiers =
  Development Status :: 5 - Production/Stable
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Typing :: Typed
keywords =
  avro
  schema
  types
  data
  generate

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.7
include_package_data = true
install_requires =
  avro~=1.10
  importlib-metadata<4 ; python_version<"3.8"
  orjson~=3.5
  typeguard~=2.12

[options.packages.find]
where = src

[options.extras_require]
testing =
  pydantic
  pytest
  pytest-cov
linting =
  black
  flake8
  interrogate
  isort
  mypy
  pre-commit

[flake8]
max-line-length = 120
