# Copyright 2022 J.P. Morgan Chase & Co.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
# the License. You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
# specific language governing permissions and limitations under the License.


# Python package configuration file

[metadata]
name = py-avro-schema
author = J.P. Morgan Chase & Co.
author_email = open_source@jpmorgan.com
description = Generate Avro schemas for Python types
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jpmorganchase/py-avro-schema
project_urls =
  Bug Tracker = https://github.com/jpmorganchase/py-avro-schema/issues
  Documentation = https://py-avro-schema.readthedocs.io/
  Download = https://pypi.python.org/pypi/py-avro-schema
  Source Code = https://github.com/jpmorganchase/py-avro-schema
classifiers =
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Typing :: Typed
keywords =
  avro
  schema
  types
  data
  generate

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.7
include_package_data = true
install_requires =
  avro~=1.10
  importlib-metadata<4 ; python_version<"3.8"
  orjson~=3.5
  typeguard~=2.12

[options.packages.find]
where = src

[options.extras_require]
testing =
  pydantic
  pytest
  pytest-cov
linting =
  black
  flake8
  interrogate
  isort
  mypy
  pre-commit

[flake8]
# Flake 8 linting configuration, not supported in pyproject.toml

ignore = E203,W503
max-line-length = 120
exclude =
  .svn,
  CVS,
  .bzr,
  .hg,
  .git,
  __pycache__,
  .tox
  .venv/
  venv/
  .eggs/
  build/
